# university-system-v2

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
data/: test_corrupt.json  test_partial.json  test_valid.json  university_data.json
src/university/: cli.py  exceptions.py  manager.py  persistence.py
src/university/models/: __init__.py  course.py  manager.py  person.py  student.py
tests/: conftest.py  test_course.py  test_manager.py  test_student.py
